rama desafio animaciones

--- a/Secciones/serviciotecnico.html
+++ b/Secciones/serviciotecnico.html
@@ -41,7 +41,19 @@
 
 
 
-    
+    <section> 
+
+      <Div>
+          <div>
+              <div class="box box1"></div>
+          </div>
+
+          <div>
+             <div class="box box2"></div>
+          </div>
+      </Div>
+
+    </section>
 
 
     <footer class="fondo__black">
