--- a/Secciones/serviciotecnico.html
+++ b/Secciones/serviciotecnico.html
@@ -26,17 +26,15 @@
 
 
     <section class="fondo__gray">
-       <div class="parrafosServicio">
-         <p>Si tu Mac, iPhone o iPad tienen problemas, no encienden, se han mojado, tienen rota la pantalla, se ven rallas o tienen negra la pantalla, acercate a nuestra sede principal o escribinos para brindarte la mejor solución. Contamos con un equipo de técnicos informáticos certificados por Apple, capacitados y  preparados para resolver tu problema.</p>
-
-         <p>Se realizan cambios de pantalla, modulo, baterias, diagnosticos, mantenimientos, actualizaciones de software sin cargo</p>
-
-         <p>Consultar por precios y cotizaciones via WhatsApp</p>
-
-         <figure> 
-            <img src="../Assets/Imagenes/servicio tecnico.png" alt="servicio tecnico" class="imagenServicio">
-        </figure>
-      </div>  
+      <div class="list-group">
+        <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+          Software
+        </button>
+        <button type="button" class="list-group-item list-group-item-action">Baterias</button>
+        <button type="button" class="list-group-item list-group-item-action">Modulo</button>
+        <button type="button" class="list-group-item list-group-item-action">Pin de Carga</button>
+        <button type="button" class="list-group-item list-group-item-action">Parlantes</button>
+      </div>
     </section>
 
 
